@@ -29,7 +29,7 @@
     <parent>
         <groupId>org.wildfly.core</groupId>
         <artifactId>wildfly-core-parent</artifactId>
-        <version>18.1.0-2-PSI-SNAPSHOT</version>
+        <version>18.1.1.Final</version>
     </parent>
 
     <artifactId>wildfly-cli</artifactId>
@@ -68,6 +68,9 @@
                                     <mainClass>org.jboss.as.cli.CommandLineMain</mainClass>
                                     <manifestEntries>
                                         <Multi-Release>true</Multi-Release>
+                                        <!-- Use sharable JPMS settings declared in the root pom -->
+                                        <Add-Exports>${embedding.jar.jpms.exports}</Add-Exports>
+                                        <Add-Opens>${embedding.jar.jpms.opens}</Add-Opens>
                                     </manifestEntries>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
